# trajectories

./: .gitignore  .travis.yml  Cargo.toml  NOTES.md  README.md  bindings-comparison.xlsx  compare.plt  compare.sh  compare_test2_rust_native.plt  example_cpp.csv  overlay_test2_rust_native.plt  record_and_plot.sh  test_sys.csv
gnuplot/: acc_at.plt  acc_sw_cont.plt  acc_sw_discont.plt  back_splice_idx.plt  back_step.plt  circ_seg.plt  compare_test2_rust_native.plt  dark2.pal  forward_sw_point.plt  get_pos.plt  integ_fwd_end_step.plt  intersection_values.plt  max_vel_from_acc.plt  max_vel_from_vel.plt  max_vel_vel_deriv.plt  next_accel_sw_point.plt  next_sw_point.plt  next_vel_sw_point.plt  plot-jerk.plt  plot1.plt  plot2.plt  switching_point.plt
trajectories/: Cargo.toml
trajectories-cxx-port/src/: pathsegment.rs
trajectories-cxx-port/tests/: test.rs
trajectories-jerk/: Cargo.toml  README.md
trajectories-jerk/src/: lib.rs  path.rs  path_segment.rs  test_helpers.rs  waypoint.rs
trajectories-jerk/src/trajectory/: linear_trajectory.rs  mod.rs  trajectory_segment.rs
trajectories-jerk/tests/: linear.rs  s_curve.rs
trajectories-sys/: .gitignore  CBindings.cpp  Cargo.toml  Dockerfile  Example.cpp  Path.cpp  Path.hpp  README.md  Test.cpp  Trajectory.cpp  Trajectory.hpp  alternatives.sh  build.rs  wrapper.hpp
trajectories-sys/src/: lib.rs
trajectories-trapezoidal/: Cargo.toml
trajectories-trapezoidal/src/: lib.rs
trajectories/benches/: comparison.rs  large_coords.rs  limits.rs  long_path.rs  path.rs  switching_points.rs  trajectory.rs
trajectories/src/: circular_blend.rs  circular_path_segment.rs  lib.rs  linear_path_segment.rs  macros.rs  path.rs  path_segment.rs  pathsegment.rs  prelude.rs  test_helpers.rs  trajectory.rs  trajectorystep.rs
trajectories/src/path/: circular_segment.rs  linear_segment.rs  mod.rs  path_item.rs  path_options.rs  path_switching_point.rs  segment.rs
trajectories/src/test_helpers/: helpers.rs  mod.rs  profile.rs
trajectories/src/trajectory/: limit.rs  limit_type.rs  min_max.rs  mod.rs  path_position.rs  switching_point.rs  trajectory_options.rs  trajectory_step.rs  trajectory_switching_point.rs
trajectories/src/trajectory_builder/: limit_type.rs  limits.rs  min_max.rs  mod.rs  trajectory_switching_points.rs
trajectories/tests/: compare_sys.rs  cpp_data_rust_code.rs  path_vs_sys.rs  profile.rs  spiro_gcode.rs  sys.rs  test.rs  test_cpp_port.rs
