[package]
authors = ["James Waples <jamwaffles@gmail.com>"]
edition = "2018"
name = "trajectories"
version = "0.1.0"
[[bench]]
harness = false
name = "path"

[[bench]]
harness = false
name = "switching_points"

[[bench]]
harness = false
name = "comparison"

[[bench]]
harness = false
name = "trajectory"

[[bench]]
harness = false
name = "large_coords"

[dependencies]
approx = "0.3.0"
criterion = "0.2.5"
csv = "1.0.2"
log = "0.4.6"
nalgebra = "0.16.12"
pretty_env_logger = "0.3.0"
serde = "1.0.82"
serde_derive = "1.0.82"
svg = "0.5.11"

[dependencies.cpuprofiler]
optional = true
version = "0.0.3"

[dependencies.trajectories-sys]
path = "../trajectories-sys"

[features]
default = []
profile = ["cpuprofiler"]
