[package]
authors = ["James Waples <james@wapl.es>"]
edition = "2018"
name = "trajectories"
version = "0.1.0"
[[bench]]
harness = false
name = "path"

[[bench]]
harness = false
name = "switching_points"

[[bench]]
harness = false
name = "comparison"

[[bench]]
harness = false
name = "trajectory"

[[bench]]
harness = false
name = "large_coords"

[[bench]]
harness = false
name = "long_path"

[dependencies]
approx = "0.3.1"
criterion = "0.2.10"
csv = "1.0.5"
log = "0.4.6"
nalgebra = "0.17.0"
pretty_env_logger = "0.3.0"
serde = "1.0.87"
serde_derive = "1.0.87"
svg = "0.5.12"

[dependencies.cpuprofiler]
optional = true
version = "0.0.3"

[dependencies.trajectories-sys]
path = "../trajectories-sys"

[features]
default = []
profile = ["cpuprofiler"]
