[package]
authors = ["James Waples <james@wapl.es>"]
edition = "2018"
name = "trajectories"
version = "0.1.0"
[[bench]]
harness = false
name = "limits"

[[bench]]
harness = false
name = "path"

[[bench]]
harness = false
name = "switching_points"

[[bench]]
harness = false
name = "comparison"

[[bench]]
harness = false
name = "trajectory"

[[bench]]
harness = false
name = "large_coords"

[[bench]]
harness = false
name = "long_path"

[dependencies]
approx = "0.3.2"
criterion = "0.3.0"
csv = "1.1.1"
log = "0.4.8"
nalgebra = "0.18.1"
pretty_env_logger = "0.3.1"
serde = "1.0.101"
serde_derive = "1.0.101"
svg = "0.6.0"

[dependencies.cpuprofiler]
optional = true
version = "0.0.3"

[dependencies.trajectories-sys]
path = "../trajectories-sys"

[features]
default = []
profile = ["cpuprofiler"]
